<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
xmlns:android="http://schemas.android.com/apk/res/android">

<PreferenceCategory
    android:title="@string/csr_settings">
    <EditTextPreference
        android:key="edittext_pref1"
        android:title="@string/title_edittext_preference1"
        android:summary="@string/summary_edittext_preference1"
        android:dialogTitle="@string/dialog_title_edittext_preference1"
        android:paddingBottom="@dimen/abc_action_bar_subtitle_bottom_margin_material"/>


    <EditTextPreference
        android:key="edittext_preference"
        android:title="@string/title_edittext_preference2"
        android:summary="@string/summary_edittext_preference2"
        android:dialogTitle="@string/dialog_title_edittext_preference2" />
</PreferenceCategory>
</PreferenceScreen>